<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimaryDark">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_head"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/logo" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/civ_head"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        style="@style/my_item_text"
        android:layout_marginTop="5dp"
        android:drawableLeft="@mipmap/icon_setting"
        android:text="@string/text_setting" />

    <View style="@style/line" />

    <TextView
        style="@style/my_item_text"
        android:drawableLeft="@mipmap/icon_feed_back"
        android:text="@string/text_feedback" />

    <View style="@style/line" />

    <TextView
        style="@style/my_item_text"
        android:drawableLeft="@mipmap/icon_about_us"
        android:text="@string/text_about_us" />

    <View style="@style/line" />
</LinearLayout>